--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,7 +1,9 @@
-production: &production  
+production:
   adapter: redis
-  url: redis://10.10.3.153:6381
-development: &development  
-  adapter: redis
-  url: redis://localhost:6379
-test: *development  
+  url: redis://localhost:6379/1
+
+development:
+  adapter: async
+
+test:
+  adapter: async
